<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/project_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/text_View"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginStart="43dp"
        android:layout_marginLeft="43dp"
        android:layout_marginTop="158dp"
        android:layout_marginEnd="42dp"
        android:layout_marginRight="42dp"
        android:text="@string/welcome_to_alc_4_0"
        android:textColor="#2A377E"
        android:textSize="30sp" />

    <Button
        android:id="@+id/about_alc"
        android:layout_width="wrap_content"
        android:layout_height="56dp"
        android:layout_below="@+id/text_View"
        android:layout_alignStart="@+id/text_View"
        android:layout_alignLeft="@+id/text_View"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="false"
        android:layout_gravity="center"
        android:layout_marginStart="72dp"
        android:layout_marginLeft="72dp"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="122dp"
        android:layout_marginRight="122dp"
        android:layout_marginBottom="426dp"
        android:background="#FFC107"
        android:linksClickable="true"
        android:onClick="open"
        android:text="@string/about_alc"
        android:textColor="#13120F"
        android:textSize="18sp"
        android:visibility="visible" />

    <Button
        android:id="@+id/button2"
        android:layout_width="wrap_content"
        android:layout_height="58dp"
        android:layout_below="@+id/text_View"
        android:layout_alignStart="@+id/text_View"
        android:layout_alignLeft="@+id/text_View"
        android:layout_alignEnd="@+id/text_View"
        android:layout_alignRight="@+id/text_View"
        android:layout_marginStart="78dp"
        android:layout_marginLeft="78dp"
        android:layout_marginTop="142dp"
        android:layout_marginEnd="83dp"
        android:layout_marginRight="83dp"
        android:layout_marginBottom="329dp"
        android:background="#FFC107"
        android:clickable="true"
        android:focusable="true"
        android:linksClickable="true"
        android:text="@string/my_profile"
        android:textSize="18sp" />

</RelativeLayout>